--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "chai_aur_backend",
   "version": "1.0.0",
   "description": "a backend project with MERN stack",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "Haseeb",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
